--- a/site1.html
+++ b/site1.html
@@ -107,7 +107,7 @@
             <!-- overview-section start -->
 
             <!-- Highlights section start -->
-                <section class="highlight-section pt-2" id="highlights" style="background-image:url('img/gallery/g5.webp') ;">
+                <section class="highlight-section pt-2 bg-image" id="highlights" style="background-image:url('img/gallery/g5.webp') ;">
                    <div class="container">
                     <div class="main-title text-white">
                         <div class="main-title-head">
@@ -201,7 +201,7 @@
             <!-- cta section end-->
 
              <!-- Amenities section start -->
-             <section class="highlight-section pt-2" id="amenities" style="background-image:url('img/gallery/g5.webp') ;">
+             <section class="highlight-section pt-2 bg-image" id="amenities" >
                 <div class="container">
                  <div class="main-title text-white">
                      <div class="main-title-head">
