px to rem and rem-calc implemented

--- a/site1.html
+++ b/site1.html
@@ -185,11 +185,11 @@
                         </div>
                     </div>
                    </div>
-                </div>
+                </section>
             <!-- Highlights section end -->
 
             <!-- cta section start -->
-            <div class="cta-video-section p-4 bg-yellow-light-6">
+            <div class="cta-video-section p-2 bg-yellow-light-6">
                 <div class="container">
                     <div class="cta-content">
                         <div class="row">
@@ -207,7 +207,7 @@
             <!-- cta section end-->
 
              <!-- Amenities section start -->
-             <section class="highlight-section pt-2 bg-image" id="amenities" >
+             <section class="amenities-section pt-2 bg-image" id="amenities" style="background-image:url('img/gallery/g5.webp') ;">
                 <div class="container">
                  <div class="main-title text-white">
                      <div class="main-title-head">
@@ -282,7 +282,7 @@
                     <h2>SOBHA SENTOSA</h2>
                 </div>
                 <div class="main-title-content">
-                    <p>Project Highlights</p>
+                    <p>Price Plan</p>
                 </div>
             </div>
             <div class="price-plan-content">
@@ -338,8 +338,10 @@
         </section>
     <!-- price-plan-section start -->
 
+    
+
           <!-- cta section start -->
-          <div class="cta-section p-4 bg-yellow-light-6">
+          <div class="cta-section p-2 bg-yellow-light-6">
             <div class="container">
                 <div class="cta-content">
                     <div class="row">
@@ -369,7 +371,7 @@
                     <h2>SOBHA SENTOSA</h2>
                 </div>
                 <div class="main-title-content">
-                    <p>Project Highlights</p>
+                    <p>FAQ's</p>
                 </div>
             </div>
             <div class="faq-content">
