--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
 
    <!-- font-size -->
 
+   <!-- <iframe src="site1.html" style="width: 100%; height: 500px;" frameborder="0"></iframe> -->
+
    <!-- buttons -->
    <h2>Buttons</h2>
    <a href="#" class="btn">Default Btn</a>
@@ -1223,6 +1225,15 @@
         </div>
     <!-- auto slider with controls end -->
 
+    <hr class="mt-4 mb-4">
+
+    <!-- css text animation start -->
+    <h3 class="mt-1 blink text-primary"> text animation blink effect </h3>
+    <h3 class="mt-1 color-change">text animation color-change effect </h3>
+    <h3 class="mt-1 bg-change text-white">text animation bg-change effect </h3>
+    <h3 class="mt-1 zoom text-black">text animation zoom-in effect </h3>
+    <h3 class="mt-1 elastic text-black">text animation elastic effect </h3>
+    <!-- css text animation end -->
     <hr class="mt-4 mb-4">
 
 
