clip path css added

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
     <!-- responsive navbar -->
 
-    <div class="responsive-navbar fixed bg-yellow">
+    <div class="responsive-navbar fixed bg-yellow p-2">
         <div class="container">
             <div class="navbar-content">
                 <div class="nav-logo">
-                    <span class="icon-youtube2 text-red"></span>
+                    <span class="icon-youtube2 text-red font-xl"></span>
                 </div>
                 <div class="nav-links deskBlock">
                     <a href="#highlights" class="text-red">Highlights</a>
@@ -73,7 +73,8 @@
 
     <div class="container">
 
-        <div class="mt-5"></div>
+        <div class="mb-4"></div>
+        <br><br><br><br>
    <!-- colors -->
    <span class="text-primary">text-primary</span> |
    <span class="text-secondary">text-secondary</span> |
@@ -135,6 +136,8 @@
    <a href="#" class="btn-complement-red">Red Btn</a>
    <a href="#" class="btn-rounded-red  text-hover-white">click me</a>
    <a href="#" class="btn-rounded-outlined-yellow  text-hover-white">click me</a>
+   <a href="#" class="btn-sharp-red  text-hover-white">click me</a>
+   <a href="#" class="btn-sharp-outlined-yellow  text-hover-white">click me</a>
 
    <!-- cards -->
    <h2>Card</h2>
@@ -1234,6 +1237,120 @@
     <h3 class="mt-1 zoom text-black">text animation zoom-in effect </h3>
     <h3 class="mt-1 elastic text-black">text animation elastic effect </h3>
     <!-- css text animation end -->
+    <hr class="mt-4 mb-4">
+
+    <!-- clip path  start -->
+        <div class="row gap-2">
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-triangle" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-trapezoid" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-parallelogram" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-rhombus" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-pentagon" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <p class="clip-hexagon">Lorem ipsum dolor sit amet, consectetur adipisicing Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto veritatis voluptate expedita illum facere cupiditate modi molestiae accusamus cum illo tempore possimus vitae molestias, necessitatibus voluptatem ipsam voluptates. Tempore alias, quidem dolore, cumque laborum eius facere nemo maiores animi dolorem aspernatur voluptate quibusdam eos sit veritatis, eaque minus quos tempora optio? Hic nobis aut nesciunt ipsum cupiditate id. Optio saepe vitae id assumenda, rerum, atque aut, expedita repudiandae quos doloribus aspernatur autem aliquid exercitationem ex impedit placeat sed quod magni soluta nobis deserunt tempora. Optio dolores, in perspiciatis ipsam cupiditate molestias ea sed! Consequatur consequuntur vero eaque tempora consectetur?s elit. Magnam ratione ullam quia, nobis adipisci culpa? Quo assumenda ad velit illum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sint enim nam ullam deserunt, suscipit temporibus, voluptatibus dolorem distinctio, itaque facere iste ut officia architecto porro laudantium cumque nesciunt tempora id vel animi deleniti quam odio quae? Mollitia, harum ipsam possimus sapiente a modi et provident! Voluptas, cum numquam? Harum est minima quasi aspernatur cum fugit, dolorum unde obcaecati. Eligendi aliquid cupiditate dolorum porro non est id exercitationem vero impedit dolores illo magni alias saepe consequuntur, eius, neque maiores amet, tempora facilis? Fugit nemo vero, similique sint mollitia corrupti corporis quasi soluta explicabo, quam et autem minima nam odit perferendis.</p>
+            </div>
+             <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-heptagon" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-octagon" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <p class="clip-nonagon">Lorem ipsum dolor sit amet, consectetur adipisicing Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto veritatis voluptate expedita illum facere cupiditate modi molestiae accusamus cum illo tempore possimus vitae molestias, necessitatibus voluptatem ipsam voluptates. Tempore alias, quidem dolore, cumque laborum eius facere nemo maiores animi dolorem aspernatur voluptate quibusdam eos sit veritatis, eaque minus quos tempora optio? Hic nobis aut nesciunt ipsum cupiditate id. Optio saepe vitae id assumenda, rerum, atque aut, expedita repudiandae quos doloribus aspernatur autem aliquid exercitationem ex impedit placeat sed quod magni soluta nobis deserunt tempora. Optio dolores, in perspiciatis ipsam cupiditate molestias ea sed! Consequatur consequuntur vero eaque tempora consectetur?s elit. Magnam ratione ullam quia, nobis adipisci culpa? Quo assumenda ad velit illum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sint enim nam ullam deserunt, suscipit temporibus, voluptatibus dolorem distinctio, itaque facere iste ut officia architecto porro laudantium cumque nesciunt tempora id vel animi deleniti quam odio quae? Mollitia, harum ipsam possimus sapiente a modi et provident! Voluptas, cum numquam? Harum est minima quasi aspernatur cum fugit, dolorum unde obcaecati. Eligendi aliquid cupiditate dolorum porro non est id exercitationem vero impedit dolores illo magni alias saepe consequuntur, eius, neque maiores amet, tempora facilis? Fugit nemo vero, similique sint mollitia corrupti corporis quasi soluta explicabo, quam et autem minima nam odit perferendis.</p>
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-decagon" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-bevel" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-rabbet" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <p class="clip-left-arrow">Lorem ipsum dolor sit amet, consectetur adipisicing Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto veritatis voluptate expedita illum facere cupiditate modi molestiae accusamus cum illo tempore possimus vitae molestias, necessitatibus voluptatem ipsam voluptates. Tempore alias, quidem dolore, cumque laborum eius facere nemo maiores animi dolorem aspernatur voluptate quibusdam eos sit veritatis, eaque minus quos tempora optio? Hic nobis aut nesciunt ipsum cupiditate id. Optio saepe vitae id assumenda, rerum, atque aut, expedita repudiandae quos doloribus aspernatur autem aliquid exercitationem ex impedit placeat sed quod magni soluta nobis deserunt tempora. Optio dolores, in perspiciatis ipsam cupiditate molestias ea sed! Consequatur consequuntur vero eaque tempora consectetur?s elit. Magnam ratione ullam quia, nobis adipisci culpa? Quo assumenda ad velit illum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sint enim nam ullam deserunt, suscipit temporibus, voluptatibus dolorem distinctio, itaque facere iste ut officia architecto porro laudantium cumque nesciunt tempora id vel animi deleniti quam odio quae? Mollitia, harum ipsam possimus sapiente a modi et provident! Voluptas, cum numquam? Harum est minima quasi aspernatur cum fugit, dolorum unde obcaecati. Eligendi aliquid cupiditate dolorum porro non est id exercitationem vero impedit dolores illo magni alias saepe consequuntur, eius, neque maiores amet, tempora facilis? Fugit nemo vero, similique sint mollitia corrupti corporis quasi soluta explicabo, quam et autem minima nam odit perferendis.</p>
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-right-arrow" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-left-point" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-right-point" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <p class="clip-left-chevron">Lorem ipsum dolor sit amet, consectetur adipisicing Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto veritatis voluptate expedita illum facere cupiditate modi molestiae accusamus cum illo tempore possimus vitae molestias, necessitatibus voluptatem ipsam voluptates. Tempore alias, quidem dolore, cumque laborum eius facere nemo maiores animi dolorem aspernatur voluptate quibusdam eos sit veritatis, eaque minus quos tempora optio? Hic nobis aut nesciunt ipsum cupiditate id. Optio saepe vitae id assumenda, rerum, atque aut, expedita repudiandae quos doloribus aspernatur autem aliquid exercitationem ex impedit placeat sed quod magni soluta nobis deserunt tempora. Optio dolores, in perspiciatis ipsam cupiditate molestias ea sed! Consequatur consequuntur vero eaque tempora consectetur?s elit. Magnam ratione ullam quia, nobis adipisci culpa? Quo assumenda ad velit illum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sint enim nam ullam deserunt, suscipit temporibus, voluptatibus dolorem distinctio, itaque facere iste ut officia architecto porro laudantium cumque nesciunt tempora id vel animi deleniti quam odio quae? Mollitia, harum ipsam possimus sapiente a modi et provident! Voluptas, cum numquam? Harum est minima quasi aspernatur cum fugit, dolorum unde obcaecati. Eligendi aliquid cupiditate dolorum porro non est id exercitationem vero impedit dolores illo magni alias saepe consequuntur, eius, neque maiores amet, tempora facilis? Fugit nemo vero, similique sint mollitia corrupti corporis quasi soluta explicabo, quam et autem minima nam odit perferendis.</p>
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-right-chevron" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-star" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-cross" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-message" alt="">
+             </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-close" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-frame" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-inset" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-circle" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-ellipse" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-bottom-zigzag" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-bottom-wave" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-bottom-triangle" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-bottom-slope-left" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-bottom-slope-right" alt="">
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-home" alt="">
+            </div>
+
+            <div class="col-md-3 col-xs-12">
+                <img src="img/flower.jpg" class="clip-bottom-triangle-inside" alt="">
+            </div>
+
+        </div>
+    <!-- clip path  end -->
     <hr class="mt-4 mb-4">
 
 
