--- a/site1.html
+++ b/site1.html
@@ -47,7 +47,7 @@
     <div class="banner-section">
         <!-- banner image -->
         <div class="banner-img">
-            <img src="img/banner/deskBanner.webp" class="deskBlock" alt="">
+            <img src="img/banner/deskBanner.webp" class="deskBlock clip-bottom-wave" alt="">
             <img src="img/banner/mobBanner.webp" class="mobBlock" alt="">
         </div>
         
@@ -107,7 +107,7 @@
             <!-- overview-section start -->
 
             <!-- Highlights section start -->
-                <div class="highlight-section pt-2 bg-image" id="highlights" style="background-image:url('img/gallery/g5.webp') ;">
+                <div class="highlight-section p-4 bg-image" id="highlights" style="background-image:url('img/gallery/g5.webp') ;">
                    <div class="container">
                     <div class="main-title text-white">
                         <div class="main-title-head">
@@ -125,7 +125,6 @@
                                         <div class="card-icon-round">
                                             <span class="icon-office text-purple"></span>
                                         </div>
-                                        <hr>
                                         <div class="card-body">
                                             <p>Spread to over 7.5 acres</p>
                                         </div>
@@ -138,7 +137,6 @@
                                         <div class="card-icon-round">
                                             <span class="icon-office text-purple"></span>
                                         </div>
-                                        <hr>
                                         <div class="card-body">
                                             <p>Enjoy the 30+ world class amenities with your loved ones.</p>
                                         </div>
@@ -150,7 +148,6 @@
                                         <div class="card-icon-round">
                                             <span class="icon-office text-purple"></span>
                                         </div>
-                                        <hr>
                                         <div class="card-body">
                                             <p>Refresh your mornings with a natural breeze and daily sunlight</p>
                                         </div>
@@ -162,7 +159,6 @@
                                         <div class="card-icon-round">
                                             <span class="icon-office text-purple"></span>
                                         </div>
-                                        <hr>
                                         <div class="card-body">
                                             <p>Spacious 1 & 3 BHK Apartments off to Panathur Main Road, Bangalore.</p>
                                         </div>
@@ -174,7 +170,6 @@
                                         <div class="card-icon-round">
                                             <span class="icon-office text-purple"></span>
                                         </div>
-                                        <hr>
                                         <div class="card-body">
                                             <p>Easy connectivity to nearby railway stations, city markets, schools, business hubs, etc.</p>
                                         </div>
@@ -207,7 +202,7 @@
             <!-- cta section end-->
 
              <!-- Amenities section start -->
-             <div class="amenities-section pt-2 bg-image" id="amenities" style="background-image:url('img/gallery/g5.webp') ;">
+             <div class="amenities-section p-4 bg-image" id="amenities" style="background-image:url('img/gallery/g5.webp') ;">
                 <div class="container">
                  <div class="main-title text-white">
                      <div class="main-title-head">
@@ -256,13 +251,6 @@
                         </div>
                         <div class="col-md-2 col-xs-6">
                             <div class="card" style="text-align: center;">
-                                <div class="card-content">
-                                    <span class=" icon-spoon-knife text-yellow">Restaurants</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-xs-6">
-                            <div class="card">
                                 <div class="card-content">
                                     <span class=" icon-spoon-knife text-yellow">Restaurants</span>
                                 </div>
@@ -379,7 +367,7 @@
     <!-- floorplan end -->
 
          <!-- video section start -->
-         <div class="video-section pt-2 pb-2 bg-image" id="video" style="background-image:url('img/gallery/g5.webp') ;">
+         <div class="video-section p-4 bg-image" id="video" style="background-image:url('img/gallery/g5.webp') ;">
             <div class="container">
              <div class="main-title text-white">
                  <div class="main-title-head">
@@ -408,7 +396,7 @@
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <h3 class="pt-4">Still confused about choosing the right home?</h3>
-                            <p>Get answers to all your questions, register now</p>
+                            <p class="pt-2">Get answers to all your questions, register now</p>
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <button class="btn-orange mt-4">REQUEST HERE</button>
