price hover cards and popup added

--- a/site1.html
+++ b/site1.html
@@ -336,7 +336,7 @@
                             <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan1.webp"
                                 alt="">
                             <div class="btn overlay">
-                                <button class="btn center-align">Request Here</button>
+                                <button class="btn center-align" open-modal="open-modal">Request Here</button>
                             </div>
                         </div>
                     </div>
@@ -345,7 +345,7 @@
                             <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan2.webp"
                                 alt="">
                             <div class="btn overlay">
-                                <button class="btn center-align">Request Here</button>
+                                <button class="btn center-align" open-modal="open-modal">Request Here</button>
                             </div>
                         </div>
                     </div>
@@ -354,7 +354,7 @@
                             <img src="	https://www.sobha-reality.com/sobha-sentosa/img/floorPlan/floorplan1.webp"
                                 alt="">
                             <div class="btn overlay">
-                                <button class="btn center-align">Request Here</button>
+                                <button class="btn center-align" open-modal="open-modal">Request Here</button>
                             </div>
                         </div>
                     </div>
@@ -622,11 +622,11 @@ Thane, Mumbai, Maharashtra 421204, India.
 
 
     <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="cta-modal" class="modal">
 
     <!-- Modal content -->
     <div class="modal-content">
-      <span class="close">&times;</span>
+      <span class="close" close-modal="close-modal">&times;</span>
       <div class="modal-content-form">
           <form action="" class="form-border-bottom">
               <h3 class="form-title">form type 3</h3>
@@ -644,6 +644,32 @@ Thane, Mumbai, Maharashtra 421204, India.
           </form>
       </div>
   
+      <!-- The Modal -->
+    <div id="popup-modal" class="modal popup-modal">
+        <div class="modal-content">
+            <span class="close" close-popup="close-popup">&times;</span>
+            <div class="modal-content-form">
+                <form action="" class="form-border-bottom">
+                    <h3 class="form-title">form type 3</h3>
+                    <input type="text" class="form-input" placeholder="name"> <br> <br>
+                    <div class="form-phone-group">
+                        <select name="" id="" class="form-input">
+                            <option value="">india(+91)</option>
+                            <option value="">india(+91)</option>
+                            <option value="">india(+91)</option>
+                        </select>
+                        <input type="text" class="form-input" placeholder="Mobile Number"> <br> <br>
+                    </div>
+                    <br>
+                    <button class="btn-orange">Submit</button>
+                </form>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- modal end -->
       <!-- <div>
           <div class="modal-content-form-icon">
               <div class="modal-icon-part">
