--- a/index.html
+++ b/index.html
@@ -1353,6 +1353,269 @@
     <!-- clip path  end -->
     <hr class="mt-4 mb-4">
 
+    <!-- price-plan-section start -->
+    <section class="price-plan-section pt-4" id="price-plan">
+        <div class="container">
+            <div class="main-title">
+                <div class="main-title-head">
+                    <h2>SOBHA SENTOSA</h2>
+                </div>
+                <div class="main-title-content">
+                    <p>Price Plan</p>
+                </div>
+            </div>
+            <h2 class="mb-2 text-center">Type 1</h2>
+            <div class="price-plan-content">
+                <div class="responsive-table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th scope="col">Account</th>
+                                <th scope="col">Due Date</th>
+                                <th scope="col">Amount</th>
+                                <th scope="col">Period</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td data-label="Account">Visa - 3412</td>
+                                <td data-label="Due Date">04/01/2016</td>
+                                <td data-label="Amount">$1,190</td>
+                                <td data-label="Period">03/01/2016 - 03/31/2016</td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="Account">Visa - 6076</td>
+                                <td data-label="Due Date">03/01/2016</td>
+                                <td data-label="Amount">$2,443</td>
+                                <td data-label="Period">02/01/2016 - 02/29/2016</td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="Account">Corporate AMEX</td>
+                                <td data-label="Due Date">03/01/2016</td>
+                                <td data-label="Amount">$1,181</td>
+                                <td data-label="Period">02/01/2016 - 02/29/2016</td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="Acount">Visa - 3412</td>
+                                <td data-label="Due Date">02/01/2016</td>
+                                <td data-label="Amount">$842</td>
+                                <td data-label="Period">01/01/2016 - 01/31/2016</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <h2 class="mt-2 mb-2 text-center">Type 2 -- Card Format</h2>
+            <div class="price-plan-content">
+                <div class="card" style="width: 16rem;">
+                    <div class="card-img">
+                        <img src="img/popup.jpg" alt="">
+                    </div>
+                    <div class="card-title text-center mb-1">
+                        1 BHK
+                    </div>
+                    <div class="card-body text-center">
+                        <h4>Rs 60 Lacs*</h4>
+                        <p>689 sqft</p>
+                        <button class="btn-primary text-white">Enquire Now</button>
+                    </div>
+                </div>
+            </div>
+            <h2 class="mt-2 mb-2 text-center">Type 3 --price Card Format</h2>
+            <div class="price-plan-content">
+                <div class="price-card-type1" style="width: 16rem;">
+                    <div class="card-img">
+                        <img src="img/popup.jpg" alt="">
+                    </div>
+                    <div class="price-card-body text-center">
+                        <div class="card-list-item mb-2 mt-1">
+                            <div class="card-item-heading">
+                                <span><span class="price-card-title icon-home font-xl"></span></span>
+                                <span>Area Size</span>
+                                <span>Price</span>
+                            </div>
+                            <div class="card-item-content">
+                                <span class="price-card-title">1 BHK</span>
+                                <span class="font-bold text-primary">1075 <span class="font-sm">sqft</span></span>
+                                <span class="font-bold text-primary">1.52 <span class="font-sm">Ctr*</span></span>
+                            </div>
+                        </div>
+                        <button class="btn-outlined-primary text-primary">Enquire Now <i
+                                class="icon-arrow-right2"></i></button>
+                    </div>
+                </div>
+            </div>
+            <h2 class="mt-2 mb-2 text-center">Type 3 --price Card Format</h2>
+            <div class="price-plan-content mt-3">
+                <div class="price-card-list">
+                    <div class="price-item-card active-price-card">
+                        <div class="price-card-type2">
+                            <div class="price-content">
+                                <div class="price-item ">
+                                    <span class="text-center font-bold">1 BHK</span>
+                                    <div class="price-list mt-1">
+                                        <span>Area Size</span>
+                                        <span>1200 sqft</span>
+                                    </div>
+                                    <div class="price-list">
+                                        <span>Price</span>
+                                        <span>2.51 Cr*</span>
+                                    </div>
+                                    <button class="btn-primary text-white">More Details</button>
+                                </div>
+                                <div class="price-card-img">
+                                    <img src="img/floorPlan/floorplan1.webp" alt="">
+                                    <i class=" icon-plus"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="price-item-card">
+                        <div class="price-card-type2">
+                            <div class="price-content">
+                                <div class="price-item ">
+                                    <span class="text-center font-bold">1 BHK</span>
+                                    <div class="price-list mt-1">
+                                        <span>Area Size</span>
+                                        <span>1200 sqft</span>
+                                    </div>
+                                    <div class="price-list">
+                                        <span>Price</span>
+                                        <span>2.51 Cr*</span>
+                                    </div>
+                                    <button class="btn-primary text-white">More Details</button>
+                                </div>
+                                <div class="price-card-img">
+                                    <img src="img/floorPlan/floorplan1.webp" alt="">
+                                    <i class=" icon-plus"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="price-item-card">
+                        <div class="price-card-type2">
+                            <div class="price-content">
+                                <div class="price-item ">
+                                    <span class="text-center font-bold">1 BHK</span>
+                                    <div class="price-list mt-1">
+                                        <span>Area Size</span>
+                                        <span>1200 sqft</span>
+                                    </div>
+                                    <div class="price-list">
+                                        <span>Price</span>
+                                        <span>2.51 Cr*</span>
+                                    </div>
+                                    <button class="btn-primary text-white">More Details</button>
+                                </div>
+                                <div class="price-card-img">
+                                    <img src="img/floorPlan/floorplan1.webp" alt="">
+                                    <i class=" icon-plus"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- price-plan-section start -->
+
+
+    <!-- The Modal -->
+    <div id="cta-modal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close" close-modal="close-modal">&times;</span>
+            <div class="modal-content-form">
+                <form action="" class="form-border-bottom">
+                    <h3 class="form-title">form type 3</h3>
+                    <input type="text" class="form-input" placeholder="name"> <br> <br>
+                    <div class="form-phone-group">
+                        <select name="" id="" class="form-input">
+                            <option value="">india(+91)</option>
+                            <option value="">india(+91)</option>
+                            <option value="">india(+91)</option>
+                        </select>
+                        <input type="text" class="form-input" placeholder="Mobile Number"> <br> <br>
+                    </div>
+                    <br>
+                    <button class="btn-orange">Submit</button>
+                </form>
+            </div>
+
+            <!-- <div>
+          <div class="modal-content-form-icon">
+              <div class="modal-icon-part">
+                  <h3>We Promise</h3>
+                  <div class="icon-group">
+                      <img src="" alt="" class="icon-phone text-yellow">
+                      <p>instant <br> call back</p>
+                  </div>
+                  <div class="icon-group">
+                      <img src="" alt="" class="icon-location2 text-yellow">
+                      <p>free <br> site visit</p>
+                  </div>
+                  <div class="icon-group">
+                      <img src="" alt="" class="icon-office text-yellow">
+                      <p>Unmatched <br> Price</p>
+                  </div>
+              </div>
+              <div class="modal-form-part">
+                  <form action="" class="form-border-bottom">
+                      <h3 class="form-title">form type 3</h3>
+                      <input type="text" class="form-input" placeholder="name" > <br> <br>
+                      <div class="form-phone-group">
+                      <select name="" id="" class="form-input">
+                          <option value="">india(+91)</option>
+                          <option value="">india(+91)</option>
+                          <option value="">india(+91)</option>
+                      </select>
+                      <input type="text" class="form-input" placeholder="Mobile Number" > <br> <br>
+                      </div>
+                      <br>
+                      <button class="btn-orange">Submit</button>
+                  </form>
+              </div>
+          </div>
+          <div class="modal-content">
+              9087654321
+          </div>
+      </div> -->
+
+        </div>
+
+    </div>
+
+    <!-- modal end -->
+
+    <!-- The Modal -->
+    <div id="popup-modal" class="modal popup-modal">
+        <div class="modal-content">
+            <span class="close" close-popup="close-popup">&times;</span>
+            <div class="modal-content-form">
+                <form action="" class="form-border-bottom">
+                    <h3 class="form-title">form type 3</h3>
+                    <input type="text" class="form-input" placeholder="name"> <br> <br>
+                    <div class="form-phone-group">
+                        <select name="" id="" class="form-input">
+                            <option value="">india(+91)</option>
+                            <option value="">india(+91)</option>
+                            <option value="">india(+91)</option>
+                        </select>
+                        <input type="text" class="form-input" placeholder="Mobile Number"> <br> <br>
+                    </div>
+                    <br>
+                    <button class="btn-orange">Submit</button>
+                </form>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- modal end -->
+
 
 </div>
 
